--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,5 +46,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script
+  type="text/javascript"
+  src={`https://maps.googleapis.com/maps/api/js?key=AIzaSyBSRpk2O7ZkVtqQknrlERKR-DwpiRi8Z_U&libraries=places`}
+></script> -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSRpk2O7ZkVtqQknrlERKR-DwpiRi8Z_U&libraries=places"></script>
+
   </body>
 </html>
