PayHere payment gateway created

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -51,6 +51,7 @@
   src={`https://maps.googleapis.com/maps/api/js?key=AIzaSyBSRpk2O7ZkVtqQknrlERKR-DwpiRi8Z_U&libraries=places`}
 ></script> -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSRpk2O7ZkVtqQknrlERKR-DwpiRi8Z_U&libraries=places"></script>
+<script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
 
   </body>
 </html>
